# SerialTool

./: .gitignore  README.md  index.html  package-lock.json  package.json
serialtool-python/: Log.py  Serial.py  Serial_Version.py
src/: App.vue
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  log.rs  main.rs  serial.rs  version.rs
